# Schnorr-Scheme

./: CMakeLists.txt  main.cpp
helpers/math-operations/: MathOperations.cpp  MathOperations.h
helpers/schnorr-operations/: SchnorrOperations.cpp  SchnorrOperations.h
helpers/schnorr-signature/: SchnorrSignature.cpp  SchnorrSignature.h
helpers/schnorr-verification/: SchnorrVerification.cpp  SchnorrVerification.h
